# halo-2-example

./: Cargo.toml  README.md
.github/: settings.yml
src/: chip.rs  circuit.rs  main.rs  numeric_instructions.rs
