[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
description="""example of halo 2 circuit"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="halo-2-example"
repository ="https://github.com/thor314/halo-2-example"
version    ="0.1.0"

# Two references, besides crates.rs, to look for quick examples:
# https://github.com/brson/stdx 
# https://rust-lang-nursery.github.io/rust-cookbook/
[dependencies]
ff = "0.13"
group = "0.13"
halo2_proofs = "0.3.0"

[dev-dependencies]